2008-02-23  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: possible fix for 363621.

2008-02-23  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.mdp, Mono.TextEditor/Document.cs,
	  Mono.TextEditor/LineSegmentTree.cs, Mono.TextEditor/GapBuffer.cs,
	  Mono.TextEditor.Highlighting/SyntaxMode.cs: Added some assertions which
	  help to track errors.

2008-02-23  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.Tests/Mono.TextEditor.Tests.pidb: Removed some unused
	  glade and gnome-sharp references (only the unused). But I'll continue to
	  remove glade, we need to lower the dependency tree a bit.

2008-02-22  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs, Mono.TextEditor/TextViewMargin.cs,
	  Mono.TextEditor/SearchOptions.cs, Mono.TextEditor/TextEditorData.cs,
	  Mono.TextEditor/TextEditor.cs, Mono.TextEditor/SearchResult.cs,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests/SearchTests.cs: Fixed Bug
	  364045 - Can't use Search Previous command to go through to all matches.
	  And wrote some unit tests for the search commands. 

2008-02-22  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/Document.cs: Fixed bug in logicaltovisuallocation.

2008-02-22  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs, Mono.TextEditor/SearchResult.cs: Search now
	  gives more information about the result.

2008-02-22  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Added support for custom drag sources.

2008-02-22  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs: Added try/catch, may help to track
	  the cut&paste problem.

2008-02-22  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Bug 363951 - Numeric keyboard does not work

2008-02-22  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs: Changed copy behaviour.

2008-02-22  Mike Krüger <mkrueger@novell.com> 
